--- a/password-manager/package.json
+++ b/password-manager/package.json
@@ -10,6 +10,7 @@
   "author": "Seung Hwan Choi",
   "license": "ISC",
   "dependencies": {
+    "crypto-js": "^3.1.5",
     "node-persist": "0.0.6"
   }
 }
